# Engineer2026_ROS

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/arm_driver/include/arm_driver/arm_driver/msg/: joint_command.h  joint_command.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/arm_driver/include/arm_driver/arm_driver/msg/detail/: joint_command__functions.c  joint_command__rosidl_typesupport_fastrtps_c.h  joint_command__struct.hpp  (+5 more)
install/arm_driver/lib/arm_driver/: hjarm_engineer_node  moveit2_arm_control
install/arm_driver/share/ament_index/resource_index/package_run_dependencies/: arm_driver
install/arm_driver/share/ament_index/resource_index/parent_prefix_path/: arm_driver
install/arm_driver/share/arm_driver/: package.dsv  package.ps1  package.sh
install/arm_driver/share/arm_driver/cmake/: arm_driver__rosidl_typesupport_cExport-noconfig.cmake  arm_driver__rosidl_typesupport_cExport.cmake  arm_driver__rosidl_typesupport_introspection_cExport-noconfig.cmake  arm_driver__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_arm_driver__rosidl_generator_cExport.cmake  export_arm_driver__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/arm_driver/share/arm_driver/msg/: JointCommand.idl
install/hjarm_golden/share/hjarm_golden/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hjarm_golden/share/hjarm_golden/cmake/: hjarm_goldenConfig.cmake
install/hjarm_golden/share/hjarm_golden/meshes/: Link6.STL
install/hjarm_golden/share/hjarm_golden/urdf/: Link1.STL  Link5.STL  hjarm_golden.csv
install/mybot_moveit2/lib/mybot_moveit2/: moveit2_arm_control
install/mybot_moveit2/share/ament_index/resource_index/package_run_dependencies/: mybot_moveit2
install/mybot_moveit2/share/ament_index/resource_index/parent_prefix_path/: mybot_moveit2
install/mybot_moveit2/share/mybot_moveit2/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mybot_moveit2/share/mybot_moveit2/cmake/: mybot_moveit2Config.cmake
install/mybot_moveit2/share/mybot_moveit2/config/: hjarm_golden.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  ros2_controllers.yaml
install/mybot_moveit2/share/mybot_moveit2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
log/: latest_build
src/arm_driver/: CMakeLists.txt
src/arm_driver/include/arm_driver/: hjarm_engineer.h
src/arm_driver/launch/: all_start.launch.py
src/arm_driver/msg/: JointCommand.msg
src/arm_driver/scripts/: hjarm_controller_get.py  keyboard_servo.py
src/arm_driver/src/: hjarm_engineer.cpp
src/hjarm_golden/: CMakeLists.txt
src/hjarm_golden/meshes/: Link4.STL
src/hjarm_golden/urdf/: Link2.STL  base_link.STL  hjarm_golden.urdf  hjarm_golden.xml
src/mybot_moveit2/: CMakeLists.txt  package.xml
src/mybot_moveit2/config/: hjarm_golden.gazebo.xacro  hjarm_golden.ros2_control.xacro  hjarm_golden.srdf  moveit.rviz  servo.yaml
src/mybot_moveit2/launch/: gazebo.launch.py  moveit_servo.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/mybot_moveit2/scripts/: check_point.py  moveit2_arm_control.py
(+3 files in other folders)
